--- a/index.html
+++ b/index.html
@@ -5,34 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cat Culator</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <!-- <script src="./scripts/calculator" defer></script> -->
+    <script src="./scripts/calculator.js" defer></script>
   </head>
   <body>
     <div class="container">
-        <div>Display Value = 0</div>
+        <div class="display">0</div>
         <div class="row">
-            <button>9</button>
-            <button>8</button>
-            <button>7</button>
-            <button>C</button>
+            <button class="number">9</button>
+            <button class="number">8</button>
+            <button class="number">7</button>
+            <button class="clear">C</button>
         </div>
         <div class="row">
-            <button>6</button>
-            <button>5</button>
-            <button>4</button>
-            <button>*</button>            
+            <button class="number">6</button>
+            <button class="number">5</button>
+            <button class="number">4</button>
+            <button class="operator">*</button>            
         </div>
         <div class="row">
-            <button>3</button>
-            <button>2</button>
-            <button>1</button>
-            <button>/</button>
+            <button class="number">3</button>
+            <button class="number">2</button>
+            <button class="number">1</button>
+            <button class="operator">/</button>
         </div>
         <div class="row">
-            <button>+</button>
-            <button>0</button>
-            <button>-</button>
-            <button>=</button>
+            <button class="operator">+</button>
+            <button class="number">0</button>
+            <button class="operator">-</button>
+            <button class="equal">=</button>
         </div>
     </div>
   </body>
